- TP framework bug

--- a/Test/Base.lproj/Main.storyboard
+++ b/Test/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9046" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Jyd-ce-O0P">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9035"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +16,114 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OaI-QL-ML7">
+                                <rect key="frame" x="284" y="285" width="32" height="30"/>
+                                <state key="normal" title="Next">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="aUK-MJ-0zo" kind="show" id="GJG-1U-avJ"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="OaI-QL-ML7" secondAttribute="centerY" id="1oz-o9-HYf"/>
+                            <constraint firstAttribute="centerX" secondItem="OaI-QL-ML7" secondAttribute="centerX" id="7pE-sP-63m"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Hmh-x3-lLh"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="720" y="343"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="lsv-yi-M4f">
+            <objects>
+                <viewController id="aUK-MJ-0zo" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cqE-L6-IEx"/>
+                        <viewControllerLayoutGuide type="bottom" id="a1d-Et-AWU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CSa-Zz-AU9">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CWT-2s-6Qx" customClass="TPKeyboardAvoidingScrollView">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BdD-c7-KRX">
+                                        <rect key="frame" x="0.0" y="0.0" width="113" height="84"/>
+                                        <subviews>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4r9-Iw-B0k">
+                                                <rect key="frame" x="8" y="8" width="97" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="Tqn-5l-79k"/>
+                                                    <constraint firstAttribute="width" constant="97" id="dRV-uA-9uP"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="2" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kfJ-BS-T4f">
+                                                <rect key="frame" x="8" y="46" width="97" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="97" id="cRh-hQ-3yB"/>
+                                                    <constraint firstAttribute="height" constant="30" id="hrO-kf-WXB"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="4r9-Iw-B0k" secondAttribute="trailing" constant="8" id="50d-KX-UTH"/>
+                                            <constraint firstItem="kfJ-BS-T4f" firstAttribute="leading" secondItem="BdD-c7-KRX" secondAttribute="leading" constant="8" id="ARr-gZ-Kjg"/>
+                                            <constraint firstAttribute="trailing" secondItem="kfJ-BS-T4f" secondAttribute="trailing" constant="8" id="GDn-Yu-pgb"/>
+                                            <constraint firstItem="4r9-Iw-B0k" firstAttribute="top" secondItem="BdD-c7-KRX" secondAttribute="top" constant="8" id="Yww-xD-1mM"/>
+                                            <constraint firstAttribute="bottom" secondItem="kfJ-BS-T4f" secondAttribute="bottom" constant="8" id="iEt-td-pic"/>
+                                            <constraint firstItem="kfJ-BS-T4f" firstAttribute="top" secondItem="4r9-Iw-B0k" secondAttribute="bottom" constant="8" id="q5y-FB-t5a"/>
+                                            <constraint firstItem="4r9-Iw-B0k" firstAttribute="leading" secondItem="BdD-c7-KRX" secondAttribute="leading" constant="8" id="swE-4a-v3w"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="BdD-c7-KRX" secondAttribute="bottom" id="43x-Cg-rAP"/>
+                                    <constraint firstItem="BdD-c7-KRX" firstAttribute="leading" secondItem="CWT-2s-6Qx" secondAttribute="leading" id="Go6-sJ-gVI"/>
+                                    <constraint firstAttribute="trailing" secondItem="BdD-c7-KRX" secondAttribute="trailing" id="VwD-EC-1Ju"/>
+                                    <constraint firstItem="BdD-c7-KRX" firstAttribute="top" secondItem="CWT-2s-6Qx" secondAttribute="top" id="jj1-TL-x8g"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="a1d-Et-AWU" firstAttribute="top" secondItem="CWT-2s-6Qx" secondAttribute="bottom" id="CgW-R6-WtN"/>
+                            <constraint firstItem="CWT-2s-6Qx" firstAttribute="leading" secondItem="CSa-Zz-AU9" secondAttribute="leading" id="PhT-Cp-1jL"/>
+                            <constraint firstItem="CWT-2s-6Qx" firstAttribute="top" secondItem="cqE-L6-IEx" secondAttribute="bottom" id="Rmh-jj-k7X"/>
+                            <constraint firstAttribute="trailing" secondItem="CWT-2s-6Qx" secondAttribute="trailing" id="cXB-95-5sE"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Uj-vL-cfu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1385" y="343"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="39s-1f-kwt">
+            <objects>
+                <navigationController id="Jyd-ce-O0P" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fgw-2g-rsz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="b8H-OM-N7d"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V8r-vs-qZ3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-76" y="343"/>
         </scene>
     </scenes>
 </document>
