--- a/Test/Base.lproj/Main.storyboard
+++ b/Test/Base.lproj/Main.storyboard
@@ -5,6 +5,53 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9035"/>
     </dependencies>
     <scenes>
+        <!--Collection View Controller-->
+        <scene sceneID="4BX-el-mKf">
+            <objects>
+                <collectionViewController id="YQ8-J1-UAv" customClass="CollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="eUL-yf-IRh">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ruD-Ow-CwF">
+                            <size key="itemSize" width="112" height="87"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="aBt-fI-5WV">
+                                <rect key="frame" x="0.0" y="64" width="112" height="87"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="112" height="87"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="03w-vk-ahg">
+                                            <rect key="frame" x="8" y="8" width="97" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e7v-2D-8KH">
+                                            <rect key="frame" x="8" y="49" width="97" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="YQ8-J1-UAv" id="FuW-e0-KQR"/>
+                            <outlet property="delegate" destination="YQ8-J1-UAv" id="nRs-1d-UGQ"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6DK-cQ-itg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="720" y="-390"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -18,12 +65,19 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OaI-QL-ML7">
-                                <rect key="frame" x="284" y="285" width="32" height="30"/>
-                                <state key="normal" title="Next">
+                                <rect key="frame" x="281" y="285" width="39" height="30"/>
+                                <state key="normal" title="Scroll">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <segue destination="aUK-MJ-0zo" kind="show" id="GJG-1U-avJ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mj2-nS-Hcr">
+                                <rect key="frame" x="266" y="74" width="69" height="30"/>
+                                <state key="normal" title="Collection"/>
+                                <connections>
+                                    <segue destination="YQ8-J1-UAv" kind="show" id="gr4-fk-vWO"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -31,6 +85,8 @@
                         <constraints>
                             <constraint firstAttribute="centerY" secondItem="OaI-QL-ML7" secondAttribute="centerY" id="1oz-o9-HYf"/>
                             <constraint firstAttribute="centerX" secondItem="OaI-QL-ML7" secondAttribute="centerX" id="7pE-sP-63m"/>
+                            <constraint firstItem="Mj2-nS-Hcr" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="10" id="9Q2-1Y-2lD"/>
+                            <constraint firstItem="Mj2-nS-Hcr" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="WwU-mo-Ufw"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Hmh-x3-lLh"/>
@@ -55,10 +111,10 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BdD-c7-KRX">
-                                        <rect key="frame" x="0.0" y="0.0" width="113" height="84"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="113" height="176"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4r9-Iw-B0k">
-                                                <rect key="frame" x="8" y="8" width="97" height="30"/>
+                                                <rect key="frame" x="8" y="100" width="97" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="Tqn-5l-79k"/>
                                                     <constraint firstAttribute="width" constant="97" id="dRV-uA-9uP"/>
@@ -67,7 +123,7 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="2" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kfJ-BS-T4f">
-                                                <rect key="frame" x="8" y="46" width="97" height="30"/>
+                                                <rect key="frame" x="8" y="138" width="97" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="97" id="cRh-hQ-3yB"/>
                                                     <constraint firstAttribute="height" constant="30" id="hrO-kf-WXB"/>
@@ -81,7 +137,7 @@
                                             <constraint firstAttribute="trailing" secondItem="4r9-Iw-B0k" secondAttribute="trailing" constant="8" id="50d-KX-UTH"/>
                                             <constraint firstItem="kfJ-BS-T4f" firstAttribute="leading" secondItem="BdD-c7-KRX" secondAttribute="leading" constant="8" id="ARr-gZ-Kjg"/>
                                             <constraint firstAttribute="trailing" secondItem="kfJ-BS-T4f" secondAttribute="trailing" constant="8" id="GDn-Yu-pgb"/>
-                                            <constraint firstItem="4r9-Iw-B0k" firstAttribute="top" secondItem="BdD-c7-KRX" secondAttribute="top" constant="8" id="Yww-xD-1mM"/>
+                                            <constraint firstItem="4r9-Iw-B0k" firstAttribute="top" secondItem="BdD-c7-KRX" secondAttribute="top" constant="100" id="Yww-xD-1mM"/>
                                             <constraint firstAttribute="bottom" secondItem="kfJ-BS-T4f" secondAttribute="bottom" constant="8" id="iEt-td-pic"/>
                                             <constraint firstItem="kfJ-BS-T4f" firstAttribute="top" secondItem="4r9-Iw-B0k" secondAttribute="bottom" constant="8" id="q5y-FB-t5a"/>
                                             <constraint firstItem="4r9-Iw-B0k" firstAttribute="leading" secondItem="BdD-c7-KRX" secondAttribute="leading" constant="8" id="swE-4a-v3w"/>
